script: invertedOrNot function created This function was created to check id of button and return it's text content.

--- a/pyramid-generator/index.html
+++ b/pyramid-generator/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./assets/styles/styles.css">
+  <title>Pyramid Generator - Freecodecamp Mini-Project | Mateus A. Carvalho DEV</title>
 </head>
 <body>
+  <div class="container" id="container">
+    <p class="result" id="result"></p>
+  </div>
+  <button id="inverted-false-btn" type="button">▲</button>
+  <button id="inverted-true-btn" type="button">▼</button>
   
   <script src="./assets/scripts/script.js"></script>
 </body>
