feat: build new functions In this commit I builded functions to return make the rows array and print result in the HTML.

--- a/pyramid-generator/index.html
+++ b/pyramid-generator/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
   <div class="container" id="container">
-    <p class="result" id="result"></p>
+    <div class="container__paragraph">
+      <p class="result" id="result"></p>
+    </div>
+    
+    <div class="container__buttons">
+      <button id="inverted-false-btn" type="button">▲</button>
+      <button id="inverted-true-btn" type="button">▼</button>
+    </div>
   </div>
-  <button id="inverted-false-btn" type="button">▲</button>
-  <button id="inverted-true-btn" type="button">▼</button>
   
   <script src="./assets/scripts/script.js"></script>
 </body>
