style: update document title for improved clarity and branding

--- a/role-play-game/index.html
+++ b/role-play-game/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./assets/styles/styles.css">
   <link rel="stylesheet" href="./assets/styles/normalize.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <title>Document</title>
+  <title>Role Play FCC | Mateus A. Carvalho DEV</title>
 </head>
 <body>
 
